# flight-ticket-researcher

./: .gitignore  README.md  config.json  main.py  pyproject.toml  requirements.txt
src/application/: __init__.py  research_flights.py
src/domain/: entities.py  repositories.py  services.py  value_objects.py
src/infrastructure/config/: __init__.py  pydantic_config.py
src/infrastructure/engines/: __init__.py  fastmcp_eng.py  playwright_eng.py  puppeteer_eng.py  selenium_eng.py
src/infrastructure/monitoring/: __init__.py  logger.py  observability.py
src/infrastructure/persistence/: __init__.py  duckdb_repo.py  json_repo.py  pandas_repo.py
src/infrastructure/scrapers/: __init__.py  trip_scraper.py
tests/e2e/: test_e2e_scraping.py
tests/unit/: test_config.py  test_entities.py  test_monitoring.py  test_persistence.py  test_scraper.py  test_usecase.py  test_value_objects.py
