[project]
name = "flight-ticket-researcher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=23.0.0",
    "duckdb>=0.9.0",
    "fastmcp>=0.1.0",
    "orjson>=3.9.0",
    "pandas>=2.0.0",
    "playwright>=1.35.0",
    "pyarrow>=12.0.0",
    "pyppeteer>=1.0.2",
    "pytest>=7.3.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "selenium>=4.10.0",
]
